--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,12 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/react-in-jsx-scope": "off",
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "import-helpers/order-imports": [
       "warn",
       {
