--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.0.11",
     "eslint-config-next": "13.2.4",
     "eslint-plugin-import-helpers": "^1.3.1",
+    "framer-motion": "^10.12.8",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
