--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.39.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
@@ -19,14 +21,17 @@
     "clsx": "^2.1.0",
     "eslint-config-next": "^14.0.4",
     "eslint-plugin-import-helpers": "^1.3.1",
-    "framer-motion": "^10.12.8",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.321.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "tailwind-merge": "^2.2.1",
+    "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.57.0",
