refactor: changes the ui for the new version

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,7 +40,7 @@
     "import-helpers/order-imports": [
       "warn",
       {
-          "newlinesBetween": "always",
+          "newlinesBetween": "",
           "groups": [
               ["/^react/", "/^next/", "/@next/"],
               "/module/",
