--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
-    "trailingComma": "none",
-    "semi": true,
-    "singleQuote": true
+  "arrowParens": "always",
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "none",
+  "semi": false,
+  "printWidth": 120,
+  "bracketSameLine": true
 }
