--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-next": "^14.0.4",
     "eslint-plugin-import-helpers": "^1.3.1",
     "framer-motion": "^10.18.0",
+    "geist": "^1.3.0",
     "lucide-react": "^0.321.0",
     "next": "^14.0.4",
     "react": "^18",
