--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.39.3",
+    "@tanstack/react-query": "^5.49.2",
     "@types/node": "18.15.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
