--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lucide-react": "^0.321.0",
     "next": "^14.0.4",
     "react": "^18",
+    "react-aria-components": "^1.2.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "sonner": "^1.4.41",
