--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.49.2",
+    "@tanstack/react-table": "^8.19.3",
     "@types/node": "18.15.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
